fix hero bg not showing - 2

--- a/css/style.css
+++ b/css/style.css
@@ -161,7 +161,7 @@ header {
 
 /* ~ HERO ~ */
 #hero {
-  background: '../public/images/hero-bg-desktop.jpg';
+  background: url('../public/images/hero-bg-desktop.jpg');
   background-color: var(--cl-primary-shade);
   /* height: 76vh; */
   height: 700px;
